--- a/code/frontend/chat.html
+++ b/code/frontend/chat.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>聊天</title>
+    <link rel="icon" type="image/svg+xml" href="static/favicon.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -163,6 +164,7 @@
             position: relative;
             line-height: 1.6;
             box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+            word-break: break-word;
         }
 
         .user-message .message-content {
@@ -289,7 +291,8 @@
                 messages: [{
                     type: 'bot',
                     content: '你好，我是岭南大学政策问答助手，有关学校的政策问题尽管问我！'
-                }]
+                }],
+                isFirstMessage: true 
             };
             chats.push(chat);
             currentChatId = chatId;
@@ -357,6 +360,13 @@
                 type: 'user',
                 content: content
             });
+
+            // 第一条消息，更新标题
+            if (chat.isFirstMessage) {
+                chat.title = content.length > 10 ? content.substring(0, 10) + '...' : content;
+                chat.isFirstMessage = false;
+                updateChatList();
+            }
 
             // 准备发送到后端的数据
             const requestData = {
