--- a/code/frontend/chat.html
+++ b/code/frontend/chat.html
@@ -226,8 +226,8 @@
             display: flex;
             align-items: center;
             gap: 12px;
-            margin-top: -2px;
-            padding-left: 28px;
+            margin-top: -1px;
+            padding-left: 26px;
         }
 
         .ref-similarity {
@@ -350,6 +350,7 @@
             text-overflow: ellipsis;
             display: -webkit-box;
             -webkit-line-clamp: 1;
+            line-clamp: none;
             -webkit-box-orient: vertical;
             transition: max-height 0.3s ease-in-out;
             margin: 0;
@@ -359,6 +360,8 @@
         .ref-content.expanded {
             max-height: none;
             -webkit-line-clamp: unset;
+            line-clamp: none;
+            
         }
 
         .expand-btn {
@@ -650,3 +653,4 @@
     </script>
 </body>
 </html>
+
